--- a/css/header.css
+++ b/css/header.css
@@ -12,31 +12,53 @@ Medium        >=992px
 Large         >=1200px
 */
 
-/* DIY Bootstrap */
-.w-50{
-  width: 50%;
-}
-
 .hide{
   display: none;
 }
 
+html{
+  background-image: url("../images/page_background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+html,
+body{
+  overflow: auto;
+}
+
 /* other css */
 body{
-  background-image: linear-gradient(-90deg, rgb(62, 126, 135), rgb(68, 97, 145));
+  /* background-image: linear-gradient(-90deg, rgb(62, 126, 135), rgb(68, 97, 145)); */
   margin: 0;
 }
 
 body *{
-  box-sizing: border-box;
   transition-duration: 0.5s;
   transition-timing-function: ease;
   font-family: Arial;
 }
 
+h1 {
+  font-size: 30px;
+  margin: 10px 0;
+  color: white;
+  text-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
+}
+
+h2{
+  margin: 0;
+  margin-bottom: 10px;
+  color: white;
+  text-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
+}
+
 #mainCont {
   width: 1000px;
   margin: auto;
+  overflow: auto;
+  position: relative;
 }
 
 @media screen and (max-width: 992px) {
@@ -46,13 +68,25 @@ body *{
 }
 
 /* NAVBAR */
-#navbar {
+#navbarCont {
   width: 100%;
-  display: inline-block;
-  position: absolute;
+  position: fixed;
   top: 0;
-  padding-top: 20px;
+  padding: 10px 0;
   z-index: 100;
+  background-image: linear-gradient(-90deg, rgb(62, 126, 135), rgb(68, 97, 145));
+}
+
+#navbar{
+  width: 1000px;
+  margin: auto;
+  overflow: auto;
+}
+
+@media screen and (max-width: 992px) {
+  #navbar{
+    width: 100%;
+  }
 }
 
 #navBtn .fa-bars {
@@ -86,6 +120,12 @@ body *{
   min-width: 100px;
 }
 
+@media screen and (max-width: 992px) {
+  .nav-icon{
+    min-width: 0;
+  }
+}
+
 .nav-icon:hover {
   color: rgb(255, 255, 255);
 }
@@ -96,20 +136,21 @@ body *{
 
 .nav-sub-item {
   padding: 0 30px;
-  background-color: rgb(229, 229, 229);
   text-decoration: none;
   color: black;
   display: block;
   border-radius: 25px;
   margin-bottom: 10px;
+  color: white;
 }
 
 .nav-sub-item:hover {
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 /* MAINBODY */
 #mainBody {
   margin-top: 80px;
+  overflow: auto;
 }
