--- a/css/shows.css
+++ b/css/shows.css
@@ -19,11 +19,18 @@ Large         >=1200px
 #filterCont,
 #resultCont{
   width: calc(100% - 20px);
-  background-color: rgba(229, 229, 229, 0.5);
   margin: 15px 10px 10px 10px;
   border-radius: 25px;
   display: inline-block;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#filterCont{
+  background-image: linear-gradient(-90deg, rgb(62, 126, 135), rgb(68, 97, 145));
+}
+
+#resultCont{
+  background-color: rgba(229, 229, 229, 0.7);
 }
 
 .filterType{
@@ -66,12 +73,6 @@ Large         >=1200px
   height: 100%;
   display: inline-block;
   float: left;
-}
-
-.showTitle h2{
-  margin: 0;
-  margin-bottom: 10px;
-  color: white;
 }
 
 .showTitle img{
