--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -90,8 +90,8 @@ Large         >=1200px
 }
 
 .feature-cont img{
-  width: 100%;
-  height: auto;
+  height: 100%;
+    width: auto;
 }
 
 .feature-cont:not(.active){
@@ -128,6 +128,7 @@ Large         >=1200px
 .anime-block-cont{
   overflow: hidden;
   height: 200px;
+  display: flex;
 }
 
 .section-anime-block{
