allow 'top animes' section to scroll

--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -85,7 +85,7 @@ Large         >=1200px
   height: 100%;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 25px;
-  overflow: hidden;
+  overflow: scroll;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
