--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -159,10 +159,17 @@ Large         >=1200px
   position: absolute;
   bottom: 0px;
   left: 0px;
+  height: 100%;
   width: 100%;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 5% 0;
+}
+
+.section-anime-block:hover h3{
+  display: block;
+  width: 100%;
+  cursor: default;
 }
 
 .section-anime-block img{
