--- a/css/header.css
+++ b/css/header.css
@@ -88,6 +88,7 @@ h2{
   padding: 10px 0;
   z-index: 100;
   background-image: linear-gradient(-90deg, rgb(62, 126, 135), rgb(68, 97, 145));
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
 }
 
 #navbar{
@@ -171,6 +172,7 @@ h2{
 /* RATING */
 .rating{
   margin-top: 10px;
+  text-align: center;
 }
 
 .rating i{
