--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -25,59 +25,56 @@ Large         >=1200px
   }
 }
 
-#goLeft,
-#goRight{
-  height: calc(100% - 20px);
-  top: 10px;
-  position: absolute;
-  color: rgb(68, 97, 145);
-  font-size: 40px;
-  cursor: pointer;
-  min-width: 60px;
-}
-
-#goLeft{
-  left: 10px;
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
-  background-image: linear-gradient(-90deg, transparent, rgba(255, 255, 255, 0.8));
-}
-
-#goLeft:hover{
-  color: rgb(47, 83, 142);
-  background-image: linear-gradient(-90deg, transparent, rgba(255, 255, 255, 1));
-}
-
-#goRight{
-  right: 10px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  background-image: linear-gradient(-90deg, rgba(255, 255, 255, 0.8), transparent);
-}
-
-#goRight:hover{
-  color: rgb(47, 83, 142);
-  background-image: linear-gradient(-90deg, rgba(255, 255, 255, 1), transparent);
-}
-
-#goLeft i,
-#goRight i{
-  position: absolute;
-  top: calc(50% - 15px);
-}
-
-#goLeft i{
-  left: 5px;
-}
-
-#goRight i{
-  right: 5px;
-}
-
 #galleryCont{
   height: 100%;
   width: 100%;
   padding: 10px;
+}
+
+#galleryDetail{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  padding: 20px 70% 20px 20px;
+  background-image: linear-gradient(-90deg, rgba(255, 255, 255, 0), rgba(68, 97, 145, 1));
+  border-radius: 25px;
+}
+
+#galleryTitle{
+  width: 100%;
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  display: inline-block;
+}
+
+#galleryBody{
+  height: calc(100% - 175px);
+  display: block;
+  color: white;
+}
+
+#galleryButton{
+  position: relative;
+  bottom: 0;
+  display: inline-block;
+  width: 100%;
+  height:75px;
+  cursor: pointer;
+  background-color: rgb(62, 126, 135);
+  border: none;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+#galleryButton:hover{
+  background-color: rgb(72, 136, 145);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
 }
 
 .feature-cont{
@@ -86,7 +83,12 @@ Large         >=1200px
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 25px;
   overflow: hidden;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.7);
+}
+
+.feature-cont a{
+  display: block;
+  height: 100%;
 }
 
 .feature-cont img{
@@ -129,6 +131,7 @@ Large         >=1200px
   overflow: hidden;
   height: 200px;
   display: flex;
+  cursor: pointer;
 }
 
 .section-anime-block{
