--- a/css/shows.css
+++ b/css/shows.css
@@ -22,7 +22,7 @@ Large         >=1200px
   margin: 15px 10px 10px 10px;
   border-radius: 25px;
   display: inline-block;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.7);
 }
 
 #filterCont{
@@ -52,49 +52,41 @@ Large         >=1200px
   color: white;
 }
 
-#resultCont ul{
-  padding: 0;
-  list-style: none;
-}
-
-#resultCont li{
+#resultCont tr{
   max-height: 300px;
   overflow: hidden;
   margin: 20px 0;
   padding: 10px 30px;
+  display: block;
 }
 
-#resultCont li:nth-child(even){
+#resultCont tr:nth-child(even){
   background-color: rgba(229, 229, 229, 0.5);
 }
 
 .showTitle{
-  width: 120px;
+  width: 20%;
   height: 100%;
   display: inline-block;
   float: left;
 }
 
-.showTitle img{
+.title-image{
   width: 100%;
-  height: auto;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  height: 200px;
+  text-align: center;
 }
 
-.showDetail{
-  width: calc(100% - 120px);
-  max-height: calc(300px - 20px);
-  overflow: hidden;
-  display: inline-block;
-  float: left;
-  padding: 10px;
-  position: relative;
+.title-image img{
+  max-width: 100%;
+  max-height: 100%;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.7);
 }
 
 .aboutShow,
 .topReview{
   padding: 10px;
-  width: 50%;
+  width: 40%;
   height: 100%;
   float: left;
   text-overflow: ellipsis;
