--- a/css/header.css
+++ b/css/header.css
@@ -80,6 +80,15 @@ h2{
   }
 }
 
+#pageLoader{
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* NAVBAR */
 #navbarCont {
   width: 100%;
