--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -21,7 +21,7 @@ Large         >=1200px
 
 @media screen and (max-width: 768px){
   #featureGallery{
-    height: 200px;
+    height: 300px;
   }
 }
 
@@ -48,28 +48,30 @@ Large         >=1200px
   font-weight: bold;
   font-size: 50px;
   display: inline-block;
+  text-shadow: 0 4px 15px black;
 }
 
 #galleryBody{
   height: calc(100% - 175px);
   display: block;
   color: white;
+  text-shadow: 0 2px 5px black;
 }
 
-#galleryButton{
-  position: relative;
-  bottom: 0;
+#galleryDetailButton{
+  position: absolute;
+  bottom: 20px;
   display: inline-block;
-  width: 100%;
-  height:75px;
   cursor: pointer;
-  background-color: rgb(62, 126, 135);
   border: none;
-  color: white;
+  color: rgb(229, 229, 229);
   font-size: 25px;
   font-weight: bold;
-  border-radius: 15px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+#galleryDetailButton:hover{
+  color: white;
+  text-shadow: 0 4px 10px black;
 }
 
 #galleryButton:hover{
