--- a/css/header.css
+++ b/css/header.css
@@ -15,17 +15,17 @@ Large         >=1200px
 /* Fonts */
 @font-face {
   font-family: avenirNext-BoldCn;
-  src: url(../fonts/avenir/AvenirNextLTPro-BoldCn.otf);
+  src: url(../font/avenir/AvenirNextLTPro-BoldCn.otf);
 }
 
 @font-face {
   font-family: avenir-Medium;
-  src: url(../fonts/avenir/AvenirLTStd-Medium.otf);
+  src: url(../font/avenir/AvenirLTStd-Medium.otf);
 }
 
 @font-face {
   font-family: avenir-Book;
-  src: url(../fonts/avenir/AvenirLTStd-Book.otf);
+  src: url(../font/avenir/AvenirLTStd-Book.otf);
 }
 
 /* Page Related */
@@ -34,10 +34,14 @@ html{
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  display: inline-flex;
+  background-color: rgb(68, 97, 145);
 }
 
 html,
 body{
+  width: 100%;
+  height: 100%;
   overflow: auto;
 }
 
@@ -72,6 +76,7 @@ h2{
   margin: auto;
   overflow: auto;
   position: relative;
+  padding: 10px;
 }
 
 @media screen and (max-width: 992px) {
@@ -81,7 +86,7 @@ h2{
 }
 
 #pageLoader{
-  background-color: white;
+  background-color: rgb(68, 97, 145);
   position: fixed;
   top: 0;
   left: 0;
