--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -17,6 +17,8 @@ Large         >=1200px
   width: 100%;
   position: relative;
   overflow: hidden;
+  border-radius: 25px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
 }
 
 @media screen and (max-width: 768px){
@@ -28,15 +30,12 @@ Large         >=1200px
 #galleryCont{
   height: 100%;
   width: 100%;
-  padding: 10px;
 }
 
 #galleryDetail{
   position: absolute;
-  left: 10px;
-  top: 10px;
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
+  width: 100%;
+  height: 100%;
   padding: 20px 70% 20px 20px;
   background-image: linear-gradient(-90deg, rgba(255, 255, 255, 0), rgba(68, 97, 145, 1));
   border-radius: 25px;
@@ -76,7 +75,6 @@ Large         >=1200px
 
 #galleryButton:hover{
   background-color: rgb(72, 136, 145);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
 }
 
 .feature-cont{
@@ -118,7 +116,7 @@ Large         >=1200px
 
 .section {
   display: inline-block;
-  padding: 20px 10px;
+  padding: 20px 0;
   float: left;
 }
 
