created DIY Bootstrap modal. implemented popup modal for hangman page. Implemented the graphic for hangman.

--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,8 @@
 color:
 main-blue: rgb(68, 97, 145)
 main-blue-hover: rgb(47, 83, 142)
+main-red: rgb(219, 74, 92)
+main-red-hover: rgb(224, 100, 115)
 main-green: rgb(62, 126, 135)
 soft-white: rgb(229, 229, 229)
 
