--- a/css/DIYBootstrap.css
+++ b/css/DIYBootstrap.css
@@ -132,3 +132,64 @@ body *{
 .d-block{
   display: block;
 }
+
+/* DIY Bootstrap modal */
+.modal{
+  display: none;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 90;  // navbar cont is 100
+}
+
+.modalCont{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: grid;
+  min-width: 300px;
+  max-width: calc(100% - 20px);
+  background-color: rgb(229, 229, 229);
+  border-radius: 25px;
+}
+
+.modalBody{
+  height: calc(100% - 75px);
+  width: calc(100% - 20px);
+  display: block;
+  margin: 65px 10px 10px 10px;
+  background-color: white;
+  border-radius: 25px;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  word-break: break-word;
+}
+
+.modalClose{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: inline-block;
+  background-color: rgb(219, 74, 92);
+  border-radius: 25px;
+  padding: 10px 15px;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.modalClose:hover{
+  background-color: rgb(224, 100, 115);
+}
+
+.modalClose i{
+  display: block;
+}
