--- a/css/hangman.css
+++ b/css/hangman.css
@@ -6,27 +6,38 @@
 #gameBody{
   color: white;
   font-size: 30px;
+  margin: 10px 0;
+}
+
+#guessText {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 #hangmanIconCont{
-  height: 0;
-  overflow: hidden;
+  height: 200px;
+  display: inline-block;
+  position: relative;
 }
 
 #hangmanPole{
   height: 200px;
-  width: 100px;
+  width: 65px;
   border-left: 5px solid white;
   border-top: 5px solid white;
   position: absolute;
   top: 0;
-  left: 7px;
+  left: -30px;
   z-index: -1;
+  border-top-left-radius: 15px;
 }
 
 #hangmanIcon{
-  font-size: 200px;
+  height: 0;
+  padding-top: 15px;
+  overflow: hidden;
+  font-size: 175px;
   color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .btn{
