--- a/css/mainCss.css
+++ b/css/mainCss.css
@@ -100,23 +100,9 @@ Large         >=1200px
   display: none;
 }
 
-#leftBodyCont,
-#rightBodyCont{
-  display: inline-block;
-  float: left;
-  width: 50%;
-}
-
-@media screen and (max-width: 992px) {
-  #leftBodyCont,
-  #rightBodyCont{
-    width: 100%;
-  }
-}
-
 .section {
   display: inline-block;
-  padding: 20px 0;
+  padding-top: 20px;
   float: left;
 }
 
