--- a/css/DIYBootstrap.css
+++ b/css/DIYBootstrap.css
@@ -142,7 +142,7 @@ body *{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 90;  // navbar cont is 100
 }
 
@@ -158,38 +158,55 @@ body *{
   border-radius: 25px;
 }
 
-.modalBody{
-  height: calc(100% - 75px);
+.modal-body{
+  height: calc(100% - 65px);
   width: calc(100% - 20px);
   display: block;
-  margin: 65px 10px 10px 10px;
+  margin: 55px 10px 10px 10px;
   background-color: white;
-  border-radius: 25px;
+  border-radius: 20px;
   padding: 20px;
   font-size: 30px;
   text-align: center;
   word-break: break-word;
 }
 
-.modalClose{
+.modal-close{
   position: absolute;
   top: 10px;
   right: 10px;
   display: inline-block;
   background-color: rgb(219, 74, 92);
   border-radius: 25px;
-  padding: 10px 15px;
+  padding: 10px 13px;
   color: white;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 15px;
   text-align: center;
   cursor: pointer;
 }
 
-.modalClose:hover{
+.modal-close:hover{
   background-color: rgb(224, 100, 115);
 }
 
-.modalClose i{
+.modal-close i{
   display: block;
+}
+
+#modalTextInputPopup{
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: 5px 10px;
+  font-size: 15px;
+}
+
+#modalBtn{
+  position: absolute;
+  right: 0;
+  bottom: -70px;
+  min-width: 100px;
+  display: none;
+  width: 100%;
 }
