--- a/css/hangman.css
+++ b/css/hangman.css
@@ -40,7 +40,34 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+#hangmanIcon.lost{
+  color: rgb(219, 74, 92);
+}
+
 .btn{
   display: block;
   margin: 10px auto;
+}
+
+.mouse-input-letter{
+  border: none;
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  border-radius: 25px;
+  text-align: center;
+  background-color: rgb(68, 97, 145);
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.mouse-input-letter:hover{
+  background-color: rgb(47, 83, 142);
+}
+
+.mouse-input-letter:disabled{
+  background-color: rgb(229, 229, 229);
+  color: rgb(68, 97, 145);
 }
